kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-api-deployment
  labels:
    app: vehicle-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vehicle-api
  template:
    metadata:
      labels:
        app: vehicle-api
    spec:
      containers:
      - name: vehicle-api
        image: docker.io/yuri0051/vehicle_api:0.1
