kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vehicle-api-lb
spec:
  type: LoadBalancer
  selector:
    app: vehicle-api
    department: vehicle-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5001
