kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vehicle-api-ingress
spec:
  backend:
    serviceName: vehicle-api
    servicePort: 80
